--- a/main.html
+++ b/main.html
@@ -11,6 +11,24 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<p>This is the main container element</p>
+
+	p::before{
+	content:"Before Element";
+	color:red;
+	Font-size:large;
+	}
+
+	p::after{
+	content:"After Element";
+	color:red;
+	Font-size:large;
+	}
+	
+
+
+	
+
 </body>
 
 </html>
