--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
 
 <p>This is the main container element</p>
 
-	p::before{
+	p:before{
 	content:"Before Element";
 	color:red;
 	Font-size:large;
 	}
 
-	p::after{
+	p:after{
 	content:"After Element";
 	color:red;
 	Font-size:large;
